# PIM-ANNS

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  main.py  pybind_main.cpp  sift1B-32M-4096C.json  sift1M-16M-4096C.json  space1B-20M-4096C.json  space1M-20M-4096C.json
AE/: exp1.txt  exp2.txt  exp3-fig11.txt  exp3-fig12.txt  exp4.txt  exp5a-w.txt  exp5a-wo.txt  exp5b.txt  exp6.txt  exp8.txt  hello_world.sh  run_all.sh
AE/Pre-executed-logs/: exp2.txt  exp3-fig11.txt  exp3-fig12.txt  exp4.txt  exp5a-w.txt  exp5b.txt  exp6.txt  exp7.txt  exp8.txt
AE/exps/: exp1.sh  exp2.sh  exp3.sh  exp4.sh  exp5.sh  exp6.sh  exp7.sh  exp8.sh  recall84.sh  recall84.txt
AE/figures/: plot.ipynb  plot.py
common/: common.h  dataset.h
dpu/: batch_dpu_kernel.c  dpu_kernel.c  dpu_log.h
host/: dpu_state.h  host_common.h  host_fifo.cpp  host_fifo.h  util.cpp  util.h
utils/: generate_query.cpp  generate_sift1m_from1b.cpp  generate_space1m_from1b.cpp  overall.sh  sift.py  space.py  train_sift1B.cpp
